--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             height: 600px; /* 게임 캔버스의 높이 설정 */
             border: 1px solid #fff; /* 흰색 테두리 추가 */
             box-sizing: border-box; /* 테두리 크기를 포함하도록 설정 */
+            overflow: hidden; /* 스크롤바 숨기기 */
         }
         #speedIncreaseMessage {
             position: absolute;
